# aoc2023

./: .gitignore  README.md  aoc2023.cabal
app/: Cli.hs  Main.hs
ci/: build-task.yaml
ci/scripts/: build.sh  input_path.sh  install.hs  install.sh
src/: AoC.hs  Parsing.hs  Util.hs
src/AoC/: Day1.hs  Day2.hs  Day3.hs
src/AoC/Day1/: Part1.hs  Part2.hs
src/AoC/Day2/: Part1.hs  Part2.hs
src/AoC/Day3/: Part1.hs  Part2.hs
tests/: Bench.hs  Main.hs
tests/Day1/: Part1Spec.hs  Part2Spec.hs
tests/Day2/: Part1Spec.hs  Part2Spec.hs
tests/Day3/: Part1Spec.hs
