cabal-version:   3.0
name:            aoc2023
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          Edwin Marshall
maintainer:      emarshall85@gmail.com
build-type:      Simple
extra-doc-files: README.md

common warnings
    ghc-options: -Wall

common extensions
    default-extensions:
        LambdaCase

library
    import:           
        extensions
      , warnings
    exposed-modules:
        AoC.Day1
    build-depends:    
        base ^>=4.19.0.0
    hs-source-dirs:   src
    default-language: GHC2021

test-suite aoc2023-test
    import:
        extensions
      , warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   tests
    main-is:          Main.hs
    build-depends:
        base ^>=4.19.0.0
      , hspec
      , aoc2023
