cabal-version:   3.0
name:            aoc2023
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          Edwin Marshall
maintainer:      emarshall85@gmail.com
build-type:      Simple
extra-doc-files: README.md

common warnings
    ghc-options: -Wall

common extensions
    default-extensions:
        LambdaCase
      , DeriveGeneric

library
    import:           
        extensions
      , warnings
    exposed-modules:
        AoC.Day1
      , AoC.Day1.Part1
      , AoC.Day1.Part2
      , AoC.Day2
      , AoC.Day2.Part1
      , AoC.Day2.Part2
      , AoC.Day3
      , AoC.Day3.Part1
      , AoC.Day3.Part2
      , Parsing
    build-depends:    
        base
      , mtl
    hs-source-dirs:   src
    default-language: GHC2021

executable aoc2023
    import:
        extensions
      , warnings
    main-is:          Main.hs
    other-modules:
        Cli
    build-depends:
        base
      , aeson
      , transformers
      , bytestring 
      , aoc2023
      , optparse-generic

    hs-source-dirs:   app
    default-language: GHC2021

test-suite aoc2023-test
    import:
        extensions
      , warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   tests
    main-is:          Spec.hs
    other-modules:
        Day1.Part1Spec
        Day1.Part2Spec
        Day2.Part1Spec
        Day2.Part2Spec
    build-depends:
        base
      , hspec
      , aoc2023
    build-tool-depends: hspec-discover:hspec-discover
